# custodian-kernel

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml
caduceus/: __init__.py  audit.py  broker.py  cli.py  crypto.py  errors.py  grants.py  receipts.py  refs.py  vault.py
custodian/: __init__.py  _encoding.py  audit.py  bus.py  client.py  config.py  egress_proxy.py  exceptions.py  govern.py  ledger.py  middleware.py  receipt.py  sandbox.py  session.py  signing.py  types.py  universal_ledger.py  verify_kit.py
custodian_kernel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  BUSINESSES_THIS_UNLOCKS.md  GETTING_STARTED.md  NEMOCLAW.md  POLICY_LANGUAGE.md  SECURITY.md  VERIFICATION.md  VIDEO_SCRIPT.md  WHAT_THIS_IS.md
paladin/: __init__.py  _prompt.py  audit.py  backup.py  broker.py  cli.py  crypto.py  egress.py  egress_client.py  errors.py  git_credential.py  grants.py  importer.py  menu.py  receipts.py  refs.py  sandbox.py  vault.py
tests/: conftest.py  test_adapters.py  test_audit.py  test_autorank.py  test_backends.py  test_backends_twilio.py  test_beancount.py  test_bus.py  test_caduceus.py  test_cli.py  test_confirm.py  test_demo_verify.py  test_earn_and_buy.py  test_enforcer.py  test_envelope.py  test_generate_report.py  test_govern.py  test_hermes_bridge.py  test_inference_router.py  test_kill_switch.py  test_ledger.py  test_margin.py  test_middleware.py  test_nemoclaw_adapter.py  test_package_manifest_hygiene.py  test_packs_agent.py  test_packs_base.py  test_packs_engine.py  test_poison_tests.py  (+21 more)
(+369 files in other folders)
